--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,26 +1,26 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.2"
 
     defaultConfig {
         applicationId "com.michaelcarrano.sup"
         minSdkVersion 14
-        targetSdkVersion 20
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
     buildTypes {
         release {
-            runProguard true
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.parse:parse-android:1.13.1'
     compile 'fr.baloomba:viewpagerindicator:2.4.2'
-    compile 'com.android.support:support-v4:20.0.0'
+    compile 'com.android.support:support-v4:24.2.1'
 }
